Scale report API added
